# qollab_microservice_template

./: .pre-commit-config.yaml  Dockerfile  DockerfileTest  LICENSE  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: tests.yml
src/: main.py  middlewares.py
src/api/v1/: api.py
src/api/v1/endpoints/: dishes.py  menus.py  submenus.py
src/api/v1/resources/: dishes.py  menus.py
src/api/v1/services/: __init__.py  dish.py  menu.py  mixins.py  submenu.py
src/core/: config.local.yaml  config.py  config.test.yaml  config.yaml
src/db/: cache.py  db.py  dummy_cache.py  fake_cache.py  redis_cache.py
src/migrations/: env.py
src/migrations/versions/: 2023_01_08_1518_add_app_tables.py  2023_12_25_1033_add_menu_models.py
src/models/: dish.py  menu.py  mixins.py  submenu.py
src/repositories/: __init__.py
src/repositories/dish/: __init__.py  dish.py
src/repositories/menu/: __init__.py  menu.py
src/repositories/submenu/: __init__.py  fake.py  submenu.py
src/schemas/: __init__.py  base.py  healthcheck.py  status_message.py
tests/: conftest.py
tests/functionals/: test_get_menu_list.py
